--- a/EOM.Game.Server/EOM.Game.Server.csproj
+++ b/EOM.Game.Server/EOM.Game.Server.csproj
@@ -16,6 +16,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Feature\PerkDefinition\NewFolder\**" />
+    <EmbeddedResource Remove="Feature\PerkDefinition\NewFolder\**" />
+    <None Remove="Feature\PerkDefinition\NewFolder\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Discord.Net" Version="3.13.1" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="NRediSearch" Version="2.2.79" />
