ADd missing handlers

--- a/EOM.Game.Server/Docker/eom.env
+++ b/EOM.Game.Server/Docker/eom.env
@@ -85,7 +85,7 @@ NWNX_TWEAKS_HIDE_PLAYERS_ON_CHAR_LIST=1
 
 # EOM Application Environment Variables
 EOM_APP_LOG_DIRECTORY=/nwn/home/app_logs/
-EOM_SUPER_ADMIN_CD_KEY=
+EOM_SUPER_ADMIN_CD_KEY=QRJKYLN3
 EOM_BUG_WEBHOOK_URL=
 EOM_HOLONET_WEBHOOK_URL=
 EOM_DM_SHOUT_WEBHOOK_URL=
