--- a/EOM.Game.Server/Docker/docker-compose.yml
+++ b/EOM.Game.Server/Docker/docker-compose.yml
@@ -22,7 +22,7 @@ services:
     eom-server:
         hostname: nwnx-server
         stop_signal: SIGINT
-        image: nwnxee/unified:latest
+        image: nwnxee/unified:build8193.36.12
         env_file: ${PWD-.}/eom.env
         links:
             - "redis:redis"
